kubernetes/pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-configmap-test
spec:
  containers:
  - name: nginx
    image: nginx
