kubernetes/pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pv-test 
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: profil-storage
  volumes:
  - name: profil-storage
    persistentVolumeClaim:  
      claimName: profil-pvc
