kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
      app: nginx
  ports:
  - port: 8080
    targetPort: 80
